Fixed some layout bugs, added flash messages with share on them.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,7 +20,6 @@ body {
 }
 
 .wrapper {
-  background-image: url('back6.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: top top;
